# avyaan_simulation_marsyard2024

./: README.md
src/Simpli_description/: CMakeLists.txt  package.xml
src/Simpli_description/config/: joy_config.yaml
src/Simpli_description/launch/: complete.launch.py  display.launch.py  gazebo_world.launch.py  rsp.launch.py
src/Simpli_description/meshes/: DiffBar_1.stl  TieRod1_1.stl  TieRod2_1.stl  WheelHub1_1.stl  WheelHub2_1.stl  WheelHub3_1.stl  WheelHub4_1.stl  wheel1_1.stl  wheel2_1.stl  wheel3_1.stl  wheel4_1.stl
src/Simpli_description/scripts/: ground_truth_filter
src/Simpli_description/urdf/: Simpli.gazebo  Simpli.trans  Simpli.xacro  materials.xacro
src/Simpli_description/worlds/: normal_world_aruco.world
src/leo_erc_gazebo_worlds/: CMakeLists.txt  package.xml
src/leo_erc_gazebo_worlds/models/marsyard2020_terrain/: model.sdf
src/leo_erc_gazebo_worlds/models/marsyard2021_terrain/: model.sdf
src/leo_erc_gazebo_worlds/worlds/: marsyard2020.world.xacro  marsyard2021.world.xacro
src/leo_erc_gazebo_worlds/worlds/sdf/: landmark.sdf.xacro
src/new_rover_9/: CMakeLists.txt  package.xml
src/new_rover_9/config/: ackerman_config.yaml  four_ws.yaml  joint_names_new_rover_9.yaml
src/new_rover_9/launch/: display.launch.py  rsp.launch.py
src/new_rover_9/meshes/: back_l_h_l.STL  back_left_wheel_link.STL  back_r_h_l.STL  back_right_wheel_link.STL  front_l_h_l.STL  front_left_wheel_link.STL  front_r_h_l.STL  front_right_wheel_link.STL  sus1_link.STL  sus2_link.STL
src/new_rover_9/urdf/: main_file.xacro  new_rover_9.csv  new_rover_9.urdf  realsense2.urdf.xacro  ros2_control_rover.xacro
src/system_controls/: package.xml  setup.cfg  setup.py
src/system_controls/launch/: joys_control.launch.py
src/system_controls/system_controls/: joys_control.py
src/urdf_new/: CMakeLists.txt  package.xml
src/urdf_new/config/: ekf.yaml  joint_names_urdf_new.yaml  my_controllers.yaml
src/urdf_new/launch/: display.launch  gazebo.launch  rsp.launch.py  spawn_robot.launch.py
src/urdf_new/meshes/: Link_4.STL  Link_5.STL
src/urdf_new/src/: moveto_aruco.py
src/urdf_new/urdf/: example_gazebo.xacro  urdf_hello.urdf  urdf_new.csv  urdf_new.urdf  urdf_new_xacro.urdf.xacro
